[tool.poetry]
name = "vroute"
version = "0.4.0"
description = ""
authors = ["Igor Ovsyannikov <kamish@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
pyyaml = "^5.1"
cleo = "^0.6.7"
pendulum = "^2.0"
aiodns = "^2.0"
pyroute2 = "^0.5.6"
pytest-cov = "^2.7"
routeros-api = "^0.15.0"
click = "^7.0"
requests = "^2.22"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
toml = "^0.10.0"
virtualenv-tools3 = "^2.0"
virtualenv = "^16.7"
pytest-mock = "^1.10"
more-itertools = "^7.2"
aiodns = "^2.0"
pytest-aiohttp = "^0.3.0"

[tool.poetry.scripts]
vroute = "vroute.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

