[tool.poetry]
name = "vroute"
version = "3.0.0"
description = ""
authors = ["Igor Ovsyannikov <kamish@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.1"
pendulum = "^2.0"
pyroute2 = "^0.5.6"
routeros-api = "^0.15.0"
click = "^7.0"
asyncpg = "^0.20.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
toml = "^0.10.0"
virtualenv-tools3 = "^2.0"
virtualenv = "^16.7"
pytest-mock = "^1.10"
more-itertools = "^7.2"
pytest-cov = "^2.7"

[tool.poetry.scripts]
vroute = "vroute.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

